<resources>
    <string name="app_name">reservUTT</string>
    <string name="welcome">Welcome to reservUTT!</string>
    <string name="title_activity_login">Inscription</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Le mot de passe doit contenir plus de 5 caractères</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">Nom d\'utilisateur</string>
    <string name="prompt_signup">Inscription</string>
    <string name="prompt_login">Connexion</string>
    <string name="welcome_text">Bienvenu dans reservUTT!</string>
    <string name="bottom_navigation_menu_landscape">Landscape</string>
    <string name="bottom_navigation_menu_logos">Logo</string>
    <string name="bottom_navigation_menu_android">Android</string>
    <string name="bottom_navigation_menu_reservations">Réservations</string>
    <string name="bottom_navigation_menu_home">Accueil</string>
    <string name="bottom_navigation_menu_reserver">Réserver</string>
    <string name="prompt_update">Mettre à jour</string>
    <string name="prompt_password_conf">Confirmation de mot de passe</string>
    <string name="prompt_profession">Profession</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remerciement">Merci pour votre réservation !</string>
    <string name="info_reserv">Détails de la réservation</string>

    <string-array name="profession_array">
        <item>Étudiant</item>
        <item>Professeur</item>
        <item>Formateur</item>
    </string-array>

</resources>
