<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:iconTint="#FFFFFF"
        android:title="@string/bottom_navigation_menu_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_reservations"
        android:enabled="true"
        android:icon="@drawable/ic_content_paste_black_24dp"
        android:iconTint="#FFFFFF"
        android:title="@string/bottom_navigation_menu_reservations"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_reserve"
        android:enabled="true"
        android:icon="@drawable/ic_class_black_24dp"
        android:iconTint="#FFFFFF"
        android:title="@string/bottom_navigation_menu_reserver"
        android:textColor="#ffffff"
        app:showAsAction="ifRoom" />
</menu>