<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/txtvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_username" />

        <EditText
            android:id="@+id/edittxtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_username"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email" />

        <EditText
            android:id="@+id/edittxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/txtvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_password" />

        <EditText
            android:id="@+id/edittxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="**********"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_signup" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>